--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kazi Rifat Al Muin</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -32,7 +32,7 @@
 
     <section id="about" class="section-img">
         <div class="image-container">
-            <img src="about-bg.jpg" alt="About Me" class="about-image">
+            <img src="images/about-bg.jpg" alt="About Me" class="about-image">
         </div>
         <div class="container">
             <h2>About Me</h2>
@@ -41,7 +41,6 @@
             </p>
         </div>
     </section>
-
 
     <!-- Skills Section -->
     <section id="skills">
@@ -62,7 +61,7 @@
                     <ul>
                         <li>Data Structures & Algorithms</li>
                         <li>1500+ Problem Solving</li>
-                        <li>Specialsit in Codeforces</li>
+                        <li>Specialist in Codeforces</li>
                         <li>Top 30 in IUPC</li>
                     </ul>
                 </div>
@@ -122,6 +121,7 @@
         </div>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
